<resources>
    <string name="app_name">智慧党建</string>
    <string name="title_activity_login">登\t录</string>
    <string name="main_tab1">新闻中心</string>
    <string name="main_tab2">党员学习</string>
    <string name="main_tab3">时代先锋</string>
    <string name="main_tab4">党务管理</string>
    <string name="main_tab5">党建监督</string>
    <string name="about">关于</string>
    <string name="search">搜索</string>
    <string name="full_screen_play">全屏播放</string>
    <string name="title_activity_sliding_menu">SlidingMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>
